Closed
Bug 21869
Opened 26 years ago
Closed 26 years ago
Forwarding winter party message causes crash
Categories
(MailNews Core :: Backend, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M13
People
(Reporter: kinmoz, Assigned: jefft)
Details
Attachments
(2 files)
|
7.11 KB,
text/plain
|
Details | |
|
3.52 KB,
patch
|
Details | Diff | Splinter Review |
I'm attatching the multipart mime message announcing our holiday party to this
bug. When I try to forward this message, I get an assert and then a crash.
Here's the stack trace for the assert:
NTDLL! 77f7629c()
MimeObject_parse_eof(MimeObject * 0x054c9e70, int 0) line 239 + 38 bytes
MimeContainer_parse_eof(MimeObject * 0x054c9e70, int 0) line 115 + 14 bytes
MimeMultipart_parse_eof(MimeObject * 0x054c9e70, int 0) line 585 + 14 bytes
MimeMultipart_parse_eof(MimeObject * 0x054c91d0, int 0) line 580 + 16 bytes
MimeMultipart_finalize(MimeObject * 0x054c91d0) line 109 + 14 bytes
mime_free(MimeObject * 0x054c91d0) line 275 + 12 bytes
MimeContainer_finalize(MimeObject * 0x035c1f90) line 95 + 9 bytes
MimeMessage_finalize(MimeObject * 0x035c1f90) line 98 + 10 bytes
mime_free(MimeObject * 0x035c1f90) line 275 + 12 bytes
mime_parse_stream_complete(_nsMIMESession * 0x035c00c0) line 1120 + 12 bytes
nsStreamConverter::OnStopRequest(nsStreamConverter * const 0x02dd7080,
nsIChannel * 0x035c7870, nsISupports * 0x035c0f44, unsigned int 0, const
unsigned short * 0x00000000) line 721 + 13 bytes
nsOnStopRequestEvent::HandleEvent(nsOnStopRequestEvent * const 0x054cab10) line
279
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x054ca890) line 93 + 12 bytes
PL_HandleEvent(PLEvent * 0x054ca890) line 522 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x010789e0) line 483 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x11930138, unsigned int 49430, unsigned int 0,
long 17271264) line 947 + 9 bytes
USER32! 77e71820()
Here's the stack trace for the crash:
_NMSG_WRITE(int 10) line 221
abort() line 44 + 7 bytes
PR_Assert(const char * 0x0316b1ec, const char * 0x0316b1c0, int 239) line 450
MimeObject_parse_eof(MimeObject * 0x054c9e70, int 0) line 239 + 38 bytes
MimeContainer_parse_eof(MimeObject * 0x054c9e70, int 0) line 115 + 14 bytes
MimeMultipart_parse_eof(MimeObject * 0x054c9e70, int 0) line 585 + 14 bytes
MimeMultipart_parse_eof(MimeObject * 0x054c91d0, int 0) line 580 + 16 bytes
MimeMultipart_finalize(MimeObject * 0x054c91d0) line 109 + 14 bytes
mime_free(MimeObject * 0x054c91d0) line 275 + 12 bytes
MimeContainer_finalize(MimeObject * 0x035c1f90) line 95 + 9 bytes
MimeMessage_finalize(MimeObject * 0x035c1f90) line 98 + 10 bytes
mime_free(MimeObject * 0x035c1f90) line 275 + 12 bytes
mime_parse_stream_complete(_nsMIMESession * 0x035c00c0) line 1120 + 12 bytes
nsStreamConverter::OnStopRequest(nsStreamConverter * const 0x02dd7080,
nsIChannel * 0x035c7870, nsISupports * 0x035c0f44, unsigned int 0, const
unsigned short * 0x00000000) line 721 + 13 bytes
nsOnStopRequestEvent::HandleEvent(nsOnStopRequestEvent * const 0x054cab10) line
279
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x054ca890) line 93 + 12 bytes
PL_HandleEvent(PLEvent * 0x054ca890) line 522 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x010789e0) line 483 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x11930138, unsigned int 49430, unsigned int 0,
long 17271264) line 947 + 9 bytes
USER32! 77e71820()
010
Forgot to mention that I'm crashing with my 12/15/1999 Mozilla debug build.
Updated•26 years ago
|
Assignee: phil → rhp
Comment 3•26 years ago
|
||
Reassign to rhp
Updated•26 years ago
|
Assignee: rhp → jefft
Comment 4•26 years ago
|
||
Jeff,
This is a crash when forwarding this message, but we can view if fine, as well
as reply/quote just fine. Can you take a look? I'm not sure what Forwarding
Inline is doing differently than quoting.
- rhp
The reason we crash is because we don't handle multipart/signed messages well.
We have an earlier termination of parsing the multipart/signed messages for
opening as draft. This causes PR_ASSERT() which terminated the application. Mime
needs to be able to handle multipart/signed and multipart/en_____ed message.
Comment 6•26 years ago
|
||
I may have a way we can deal with this. Let me hack something up. I'll let you
know.
- Rich
Comment 7•26 years ago
|
||
Hmm...I'm not sure I follow this. There is a content type handler in the tree
for En___ messages. They don't get decoded, but you will get a nice message
saying that we can't handle it. I put one of these together for Signed messages
so we process all of the data normally.
Maybe you can help me understand this better.
- rhp
Comment 9•26 years ago
|
||
Fix looks good to me...do you want to check it in?
- rhp
| Assignee | ||
Comment 10•26 years ago
|
||
Yes, I do. Can I? Thanks,
-- Jeff
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•26 years ago
|
||
Fix checked in. mimemult.cpp modified.
Comment 12•26 years ago
|
||
changing qa assigned to pmock@netscape.com
Comment 13•26 years ago
|
||
Verified on win32, macos, and linux using the following builds:
ftp://sweetlou/products/client/seamonkey/windows/32bit/x86/2000-01-04-09-M13/sea
monkey32e.exe
ftp://sweetlou/products/client/seamonkey/unix/linux_glibc/2.2/x86/2000-01-04-08-
M13/netscape-i686-pc-linux-gnu.tar.gz
ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/2000-01-04-09-M13/NSMacIn
staller-M13.sea.bin
I can successful forward this message as a attachment or inline. :)
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•