fixed bug 21869 -- forwarding multipart/signed message crashes the system; check for the subpart isn't a multipart mime object prior setting up decomposing part function; r=rhp